# Concurso_SMIO_HEXALY

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
configs/: algorithm_compare_template.json  official_template.json  smoke_samples.json
data/official/: clrp-medium-01.txt  clrp-medium-02.txt  clrp-medium-03.txt  clrp-medium-04.txt  clrp-medium-05.txt  clrp-medium-06.txt  clrp-medium-07.txt  clrp-medium-08.txt  clrp-medium-09.txt  clrp-medium-10.txt  clrp-small-02.txt  clrp-small-03.txt  clrp-small-04.txt  clrp-small-05.txt  clrp-small-06.txt  clrp-small-07.txt  clrp-small-08.txt  clrp-small-09.txt  clrp-small-10.txt  instancia_1.txt
data/samples/: clrp_medium_coords.txt  instancia_de_prueba  medium_realistic.txt  tiny_coords.txt  tiny_full_matrix.txt
data/samples/demo/: clrp-small-01.txt  fixopt_demo.txt  instance_mty_small_001.txt
docs/: architecture.md  development_plan.md  experiments.md  instance_format.md
scripts/: build_submission_bundle.py  close_depots.py  compare_algorithms.py  find_best.py  generate_random_instance.py  ils_polish.py  reopt.py  run_benchmark.py  try_fixopt.py  update_best_registry.py  validate_solution_dir.py
src/smio_clrp/: __init__.py  cli.py
src/smio_clrp/algorithms/: __init__.py  base.py  common.py
src/smio_clrp/core/: __init__.py  distance.py  (+2 more)
tests/: test_alns_phase2.py  test_clustering.py  test_constructive_phase1.py  test_cost_and_validator.py  test_distance.py  test_experiments_phase4.py  test_fixopt_phase3.py  test_greedy_constructive.py  test_instance_reader.py  test_solution_io.py  test_vns_hybrid.py
(+60 files in other folders)
