[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smio-clrp"
version = "0.1.0"
description = "Base architecture for the SMIO-Hexaly CLRP challenge."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.scripts]
clrp = "smio_clrp.cli:main"

[project.optional-dependencies]
exact = ["gurobipy"]
alns = ["alns"]
clustering = []
dev = ["pytest", "ruff", "mypy"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
